<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Podax</string>
    <string name="app_long_name">Podax Podcaster</string>
    <string name="app_version">6.2</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="add_to_queue">Add To Queue</string>
    <string name="remove_from_queue">Remove From Queue</string>
    <string name="queue">Queue</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="search_hint">Search within Podax</string>
    <string name="refresh_subscription">Refresh Subscription</string>
    <string name="podcast_not_downloaded">This podcast has not been downloaded.</string>
    <string name="import_subscriptions">Add Subscriptions</string>
    <string name="search">Search</string>
    <string name="preferences">Preferences</string>
    <string name="about_content">
<![CDATA[
		<p>Podax was created by Dan Goldstein.
			You can email me at <a href="mailto:dan@axelby.com">dan@axelby.com</a> with any comments or questions you have.
		</p>
		<p>Podax is open source software. You can get the source code at
			<a href="http://github.com/thasmin/Podax">http://github.com/thasmin/Podax</a>.
			It is available under the 2 clause BSD license.
			The <a href="https://github.com/bauerca/drag-sort-listview">drag-sort-listview</a> library is
			included under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache 2.0 License</a>.
		</p>

		<h4>Changelog</h4>
		<p><strong>Version 6.2</strong></p>
		<ul>
		    <li>Added faster playback for devices that support it (4.0+ I believe)</li>
		    <li>Fixed bugs</li>
		</ul>
		<p><strong>Version 6.1</strong></p>
		<ul>
		    <li>gpodder.net popular list and episode syncing</li>
		    <li>fixed repeating podcast when do not delete preference was on</li>
		    <li>fixed issues with podcast images, drawer graphics, UI speed</li>
		</ul>

		<p><strong>Version 6.0</strong></p>
		<ul>
			<li>New UI</li>
			<li>Integrated GPodder Provider app</li>
			<li>No more sending subscriptions to server</li>
			<li>New internal architecture that should work better and be more stable</li>
		</ul>

		<p>Special thanks to everyone who\'s helped on Github and by sending me email.</p>
	    ]]>
    </string>
    <string name="about_podax">About Podax</string>
    <string name="download_only_on_wifi">Podax is set to only download podcasts when on Wi-fi.</string>
    <string name="no_downloads">There are no podcasts in the queue that were not downloaded.</string>
    <string name="add_rss_feed">Add RSS feed</string>
    <string name="add_from_opml_file">Add from OPML file</string>
    <string name="popular_subscription_title">Popular Subscription</string>
    <string name="add_subscription">Add Subscription</string>
    <string name="rss_not_valid">RSS not valid</string>
    <string name="drag_to_rearrange_queue">drag to rearrange queue</string>
    <string name="move_to_first_in_queue">Move to First in Queue</string>
    <string name="go_to_details">Go To Details</string>
    <string name="go_to_queue">Go To Queue</string>
    <string name="rewind">Rewind</string>
    <string name="fast_forward">Fast Forward</string>
    <string name="skip_to_end">Skip To End</string>
    <string name="thumbnail">thumbnail</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="update_request_no_wifi">Podax will not update because there is no Wi-Fi connection. This can be changed in the preferences.</string>
    <string name="no_podcasts_in_queue">There are no podcasts in the queue.</string>
    <string name="add">Add</string>
    <string name="restart">Restart</string>
    <string name="about">About</string>
    <string name="refresh">Refresh</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_intro">Thanks for using Podax! You\'re almost ready to enter the blossoming world of podcasts. All you need to do is subscribe to a podcast and Podax will do the rest. Visit the RSS link in the browser, type the RSS feed URL below, or choose one of our favorite podcasts below.</string>
    <string name="welcome_american_life">This American Life</string>
    <string name="welcome_american_life_desc">This American Life is a weekly podcast that tells interesting stories in otherwise mundane situations. It has won all of the major broadcasting awards.</string>
    <string name="subscribe">Subscribe</string>
    <string name="rss">RSS</string>
    <string name="welcome_tech_news_today">Tech News Today</string>
    <string name="welcome_tech_news_today_desc">Tom Merritt brings you "Tech News Today" with co-hosts Sarah Lane (TechTV, Revision3), Iyaz Akhtar (PC Mag, TechVi) and others. Get up to speed, with a fun and friendly ride through the need-to-know tech news of the day.</string>
    <string name="subscription_thumbnail">subscription thumbnail</string>
    <string name="download">Download</string>
    <string name="pref_update_wifi">Only update subscriptions or download podcasts while connected to a Wi-Fi network.</string>
    <string name="pref_update_wifi_title">Wi-Fi Only</string>
    <string name="pref_auto_delete">Delete podcasts automatically when playback finishes or you skip to the next podcast. If disabled, the podcast will be added to the bottom of the queue.</string>
    <string name="pref_auto_delete_title">Delete Podcasts Automatically</string>
    <string name="pref_max_num_podcasts">Maximum number of downloaded podcasts in queue.</string>
    <string name="pref_max_num_podcasts_title">Limit Number of Downloaded Podcasts</string>
    <string-array name="pref_max_num_podcasts_entries">
        <item>10</item>
        <item>20</item>
        <item>50</item>
        <item>100</item>
        <item>Unlimited</item>
    </string-array>
    <string-array name="pref_max_num_podcasts_values">
        <item>10</item>
        <item>20</item>
        <item>50</item>
        <item>100</item>
        <item>10000</item>
    </string-array>
    <string name="pref_anon_usage">Send anonymous usage data to improve Podax.</string>
    <string name="pref_anon_usage_title">Send Usage Data</string>
    <string name="pref_crash_reports">Send error reports to the developers if Podax crashes.</string>
    <string name="pref_crash_reports_title">Send Crash Reports</string>
    <string name="more_options">More Options</string>
    <string name="stop">Stop</string>
    <string name="payment">Payment</string>
    <string name="donate">Donate</string>
    <string name="flattr">Flattr</string>
    <string name="changelog">Changelog</string>
    <string name="cannot_play_podcast">Podax is unable to play \"%s\". Skipping…</string>
    <string name="log_viewer">Log Viewer</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="subscription_settings">Subscrption Settings</string>
    <string name="gpodder_authenticator_activity_title">GPodder Account</string>
    <string name="gpodder">GPodder</string>
    <string name="configuration">Configuration</string>
    <string name="podcasts">Podcasts</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="subscription">Subscription</string>

    <string-array name="expiration_options">
        <item>Never</item>
        <item>7 days</item>
        <item>14 days</item>
    </string-array>
    <string-array name="expiration_values">
        <item>-1</item>
        <item>7</item>
        <item>14</item>
    </string-array>

    <string name="username">Username</string>
    <string name="podcast_picture">podcast picture</string>
    <string name="playlist">Playlist</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="now_playing">Now Playing</string>
    <string name="subscribe_to_podcasts">Subscribe To Podcasts</string>
    <string name="top_itunes_podcasts">Top iTunes Podcasts</string>
    <string name="gpodder_sync">gpodder.net Sync</string>

    <string name="pref_sdcard">SD Card for podcast storage</string>
    <string name="pref_sdcard_title">SD Card</string>
    <string-array name="pref_sdcard_values">
        <item>/storage/sdcard0</item>
        <item>/storage/extSdCard</item>
    </string-array>
    <string-array name="pref_sdcard_entries">
        <item>Internal Storage</item>
        <item>External SD Card</item>
    </string-array>
    <string-array name="gpodder_device_types">
        <item>desktop</item>
        <item>laptop</item>
        <item>mobile</item>
        <item>server</item>
        <item>other</item>
    </string-array>

    <string name="crash_toast_text">Oops, Podax has crashed. Sorry about that!</string>
    <string name="crash_dialog_text">Sorry about that crash earlier. Would you like to report the crash to the developer?</string>
    <string name="crash_comment_prompt">What was happening before the crash?</string>
    <string name="crash_dialog_ok_text">Thanks for sending in the report and helping to make Podax better.</string>
    <string name="queue_empty">Queue empty</string>
    <string name="top_gpodder_podcasts">Top GPodder Podcasts</string>
    <string name="view_website">View Website</string>
    <string name="remove">Remove</string>
    <string name="device_name">Device Name</string>
    <string name="device_type">Device Type</string>
    <string name="desktop">desktop</string>
    <string name="laptop">laptop</string>
    <string name="mobile">mobile</string>
    <string name="server">server</string>
    <string name="other">other</string>
    <string name="gpodder_account_settings">GPodder Account Settings</string>

    <string name="gpodder_sync_error">Error syncing gpodder.net</string>
    <string name="gpodder_sync_cannot_authenticate">Cannot authenticate: %1$s</string>
    <string name="gpodder_sync_error_configuration">Cannot change device name and type: %1$s</string>
    <string name="gpodder_sync_send_podcasts">Cannot update podcasts: %1$s</string>
    <string name="gpodder_sync_retrieve_podcasts">Cannot retrieve podcasts: %1$s</string>
    <string name="gpodder_sync_retrieve_all_podcasts">Cannot retrieve all podcasts: %1$s</string>
    <string name="gpodder_sync_update_episode_positions">Cannot send episode positions: %1$s</string>
    <string name="gpodder_sync_retrieve_episode_positions">Cannot retrieve episode positions: %1$s</string>

    <string name="pref_playbackrate_title">Playback Rate</string>
    <string name="pref_playbackrate">How fast the podcast should play</string>
    <string-array name="pref_playbackrate_entries">
        <item>1.0x</item>
        <item>1.1x</item>
        <item>1.25x</item>
        <item>1.5x</item>
        <item>2.0x</item>
    </string-array>
    <string-array name="pref_playbackrate_values">
        <item>1.0</item>
        <item>1.1</item>
        <item>1.25</item>
        <item>1.5</item>
        <item>2.0</item>
    </string-array>
    <string name="playbackrate_disabled">This device cannot change the playback rate.</string>
    <string name="clear_search">Clear Search</string>
</resources>
