<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/add_subscription"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="ifRoom|withText"
        android:title="@string/add"/>
    <item
        android:id="@+id/refresh_subscriptions"
        android:icon="@drawable/ic_menu_refresh"
        android:showAsAction="ifRoom|withText"
        android:title="@string/refresh"/>
    <item
        android:id="@+id/preferences"
        android:icon="@android:drawable/ic_menu_preferences"
        android:showAsAction="never"
        android:title="@string/preferences"/>
    <item
        android:id="@+id/changelog"
        android:icon="@android:drawable/ic_menu_directions"
        android:showAsAction="never"
        android:title="@string/changelog"/>
    <item
        android:id="@+id/about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:showAsAction="never"
        android:title="@string/about"/>

</menu>