<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/podcast_pic"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/podcast_picture"
            android:scaleType="fitCenter"
            android:src="@drawable/icon" />

        <TextView
            android:id="@+id/episode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/podcast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textIsSelectable="true" />

        <com.axelby.podax.ui.PodcastProgress
            android:id="@+id/podcastprogress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/play_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="9" >

            <ImageButton
                android:id="@+id/restart_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/restart"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_media_previous" />

            <ImageButton
                android:id="@+id/rewind_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/rewind"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_media_rew" />

            <ImageButton
                android:id="@+id/play_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="3"
                android:background="@android:color/transparent"
                android:contentDescription="@string/pause"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_media_play" />

            <ImageButton
                android:id="@+id/forward_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/fast_forward"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_media_ff" />

            <View
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/skiptoend_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/skip_to_end"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_media_next" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_playlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/holo_blue_light"
            android:drawablePadding="20dp"
            android:drawableRight="@drawable/ic_media_ff_normal"
            android:gravity="left|center_vertical"
            android:padding="5dp"
            android:text="@string/playlist" />

        <Button
            android:id="@+id/btn_podcasts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/holo_green_light"
            android:drawablePadding="20dp"
            android:drawableRight="@drawable/ic_media_ff_normal"
            android:gravity="left|center_vertical"
            android:padding="5dp"
            android:text="@string/podcasts" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/holo_red_light"
            android:drawablePadding="20dp"
            android:drawableRight="@drawable/ic_media_ff_normal"
            android:gravity="left|center_vertical"
            android:padding="5dp"
            android:text="@string/search" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_prefs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@android:color/holo_purple"
                android:drawablePadding="20dp"
                android:drawableRight="@drawable/ic_media_ff_normal"
                android:gravity="left|center_vertical"
                android:padding="5dp"
                android:text="@string/preferences" />

            <Button
                android:id="@+id/btn_about"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_dark"
                android:drawablePadding="20dp"
                android:drawableRight="@drawable/ic_media_ff_normal"
                android:gravity="left|center_vertical"
                android:padding="5dp"
                android:text="@string/about" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>