<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:padding="10dp" >

    <ImageButton
        android:id="@+id/show_btn"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:contentDescription="@string/go_to_details"
        android:scaleType="fitCenter"
        android:src="@drawable/icon" />

    <TextView
        android:id="@+id/podcast"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageButton
        android:id="@+id/pause"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/stop"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_media_stop" />

    <ImageButton
        android:id="@+id/forward"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/pause"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_media_ff_normal" />

</LinearLayout>